fix new word addition on ios

--- a/css/new-word.css
+++ b/css/new-word.css
@@ -23,6 +23,7 @@
     width: 100%;
     padding: 0 1em 0 1em;
     text-align: center;
+    user-select: text;
 }
 
 .input:focus {
